--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -28,9 +28,12 @@ body {
     box-sizing: border-box;
     padding-left: 3rem;
     background: $color-primary;
+    width: 100%;
 
-    // @include respond(tab-land) {
-    //     background-color: $color-primary;
+    // @include respond(phone) {
+    //     position: fixed;
+    //     width: 100%;
+    //     height: 100%;
     // }
 
 }
