--- a/public/sass/components/_about.scss
+++ b/public/sass/components/_about.scss
@@ -1,13 +1,11 @@
 .about {
     width: 85%;
     margin: 0 auto;
-    padding: 6rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
     padding-left: 9rem;
     font-size: $default-font-size;
     font-family: $default-p-font;
-    transform: skewX(-12deg);
-    // opacity: 0.5;
-    clear: both;
 
     @include respond(phone) {
         width: 100%;
@@ -18,7 +16,7 @@
         width: 25rem;
         height: 25rem;
         float: left;
-        transform: translateX(-4rem) skewX(12deg);
+        transform: translateX(-2rem);
         position: relative;
         overflow: hidden;
         border-radius: 50%;
@@ -30,19 +28,18 @@
         @include respond(tab-land) {
             width: 35rem;
             height: 35rem;
-            transform: translateX(-6.5rem) skewX(12deg);
+            transform: translateX(-4rem);
         }
 
         @include respond(phone) {
             width: 20rem;
             height: 20rem;
-            transform: translateX(-6rem) translateY(-1rem) skewX(12deg);
+            transform: translateX(-1.5rem);
         }
     }
 
     &__img {
         height: 100%;
-        // width: 100%;
         transform: translateX(-1rem) scale(1.3);
         
         backface-visibility: hidden;
@@ -55,7 +52,6 @@
     }
 
     &__text {
-        transform: skewX(12deg);
         color: $color-grey;
         font-family: $default-p-font;
 
